--- a/3level.html
+++ b/3level.html
@@ -63,7 +63,7 @@ img {
 <div id="header">
 <h1 class="title">Examples of three-level meta-analysis</h1>
 <h4 class="author"><em>Mike Cheung</em></h4>
-<h4 class="date"><em>08 June, 2015</em></h4>
+<h4 class="date"><em>19 September, 2015</em></h4>
 </div>
 
 <div id="TOC">
@@ -1108,23 +1108,23 @@ Intercept  6.8563e-02  1.8630e-02  3.2049e-02  1.0508e-01  3.6802
 Slope_1   -1.6885e-01  4.1545e-02 -2.5028e-01 -8.7425e-02 -4.0643
 Slope_2    2.5329e-01  1.5814e-01 -5.6670e-02  5.6325e-01  1.6016
 Slope_3    1.2689e-01  1.4774e-01 -1.6268e-01  4.1646e-01  0.8589
-Slope_4   -8.3521e-03  1.5796e-01 -3.1795e-01  3.0125e-01 -0.0529
+Slope_4   -8.3549e-03  1.5796e-01 -3.1795e-01  3.0124e-01 -0.0529
 Slope_5   -1.1530e-01  1.1147e-01 -3.3377e-01  1.0317e-01 -1.0344
-Slope_6   -2.6412e-01  1.6402e-01 -5.8559e-01  5.7342e-02 -1.6104
-Slope_7   -2.9029e-01  1.4859e-01 -5.8153e-01  9.5028e-04 -1.9536
+Slope_6   -2.6412e-01  1.6402e-01 -5.8559e-01  5.7344e-02 -1.6103
+Slope_7   -2.9029e-01  1.4859e-01 -5.8152e-01  9.5240e-04 -1.9536
 Slope_8   -1.5975e-01  1.6285e-01 -4.7893e-01  1.5943e-01 -0.9810
-Tau2_2     2.1009e-03  1.2925e-03 -4.3226e-04  4.6341e-03  1.6255
+Tau2_2     2.1010e-03  1.2925e-03 -4.3226e-04  4.6342e-03  1.6255
 Tau2_3     1.0000e-10          NA          NA          NA      NA
            Pr(&gt;|z|)    
 Intercept  0.000233 ***
 Slope_1   4.818e-05 ***
-Slope_2    0.109239    
-Slope_3    0.390408    
-Slope_4    0.957832    
-Slope_5    0.300942    
-Slope_6    0.107321    
-Slope_7    0.050752 .  
-Slope_8    0.326608    
+Slope_2    0.109240    
+Slope_3    0.390411    
+Slope_4    0.957818    
+Slope_5    0.300949    
+Slope_6    0.107324    
+Slope_7    0.050754 .  
+Slope_8    0.326610    
 Tau2_2     0.104051    
 Tau2_3           NA    
 ---
@@ -1137,8 +1137,8 @@ P value of the Q statistic: 0
 Explained variances (R2):
                          Level 2 Level 3
 Tau2 (no predictor)    0.0037965  0.0141
-Tau2 (with predictors) 0.0021009  0.0000
-R2                     0.4466093  1.0000
+Tau2 (with predictors) 0.0021010  0.0000
+R2                     0.4466073  1.0000
 
 Number of studies (or clusters): 21
 Number of observed statistics: 66
@@ -1496,9 +1496,10 @@ Some of your fit indices are missing.
   To get them, fit saturated and independence models, and include them with
   summary(yourModel, refModels=...) 
   See help(mxRefModels) for an easy way of doing this in many cases. 
-timestamp: 2015-06-08 15:41:23 
-Wall clock time (HH:MM:SS.hh): 00:00:00.06 
-OpenMx version number: 2.2.4 
+timestamp: 2015-09-19 18:42:02 
+Wall clock time (HH:MM:SS.hh): 00:00:00.08 
+optimizer:  SLSQP 
+OpenMx version number: 2.2.6.86 
 Need help?  See help(mxSummary) </code></pre>
 </div>
 <div id="mixed-effects-model" class="section level2">
@@ -1554,9 +1555,10 @@ Some of your fit indices are missing.
   To get them, fit saturated and independence models, and include them with
   summary(yourModel, refModels=...) 
   See help(mxRefModels) for an easy way of doing this in many cases. 
-timestamp: 2015-06-08 15:41:23 
-Wall clock time (HH:MM:SS.hh): 00:00:00.08 
-OpenMx version number: 2.2.4 
+timestamp: 2015-09-19 18:42:03 
+Wall clock time (HH:MM:SS.hh): 00:00:00.11 
+optimizer:  SLSQP 
+OpenMx version number: 2.2.6.86 
 Need help?  See help(mxSummary) </code></pre>
 <p>References</p>
 <p>Bornmann, L., Mutz, R., &amp; Daniel, H.-D. (2007). Gender differences in grant peer review: A meta-analysis. <em>Journal of Informetrics</em>, <em>1(3)</em>, 226–238.</p>
