--- a/manual/00Index.html
+++ b/manual/00Index.html
@@ -11,7 +11,7 @@
 <div style="text-align: center;">
 <a href="http://stat.ethz.ch/R-manual/R-devel/doc/html/packages.html"><img class="arrow" src="http://stat.ethz.ch/R-manual/R-devel/doc/html/left.jpg" alt="[Up]" /></a>
 <a href="http://stat.ethz.ch/R-manual/R-devel/doc/html/index.html"><img class="arrow" src="http://stat.ethz.ch/R-manual/R-devel/doc/html/up.jpg" alt="[Top]" /></a>
-</div><h2>Documentation for package &lsquo;metaSEM&rsquo; version 0.9.4</h2>
+</div><h2>Documentation for package &lsquo;metaSEM&rsquo; version 0.9.5-2</h2>
 
 <ul><li><a href="../DESCRIPTION">DESCRIPTION file</a>.</li>
 <li><a href="../doc/index.html">User guides, package vignettes and other documentation.</a></li>
@@ -124,6 +124,8 @@
 <td>Three-Level Univariate Meta-Analysis with Maximum Likelihood Estimation</td></tr>
 <tr><td style="width: 25%;"><a href="metaSEM-package.html">metaSEM</a></td>
 <td>Meta-Analysis using Structural Equation Modeling</td></tr>
+<tr><td style="width: 25%;"><a href="Norton13.html">Norton13</a></td>
+<td>Studies on the Hospital Anxiety and Depression Scale Reported by Norton et al. (2013)</td></tr>
 <tr><td style="width: 25%;"><a href="pattern.n.html">pattern.n</a></td>
 <td>Display the Accumulative Sample Sizes for the Covariance Matrix</td></tr>
 <tr><td style="width: 25%;"><a href="pattern.na.html">pattern.na</a></td>
@@ -167,7 +169,9 @@
 <tr><td style="width: 25%;"><a href="reml3.html">reml3</a></td>
 <td>Estimate Variance Components in Three-Level Univariate Meta-Analysis with Restricted (Residual) Maximum Likelihood Estimation</td></tr>
 <tr><td style="width: 25%;"><a href="rerun.html">rerun</a></td>
-<td>Rerun models via mxRun()</td></tr>
+<td>Rerun models via mxTryHard()</td></tr>
+<tr><td style="width: 25%;"><a href="Roorda11.html">Roorda11</a></td>
+<td>Studies on Students' School Engagement and Achievement Reported by Roorda et al. (2011)</td></tr>
 <tr><td style="width: 25%;"><a href="summary.html">summary.meta</a></td>
 <td>Summary Method for tssem1, wls, meta and meta3X Objects</td></tr>
 <tr><td style="width: 25%;"><a href="summary.html">summary.meta3X</a></td>
