--- a/manual/00frame_toc.html
+++ b/manual/00frame_toc.html
@@ -105,6 +105,8 @@ dt, p code {
 <li><a href="Hunter83.html" target="content">Hunter83</a></li>
 <li><a href="Jaramillo05.html" target="content">Jaramillo05</a></li>
 <li><a href="Mak09.html" target="content">Mak09</a></li>
+<li><a href="Norton13.html" target="content">Norton13</a></li>
+<li><a href="Roorda11.html" target="content">Roorda11</a></li>
 <li><a href="anova.html" target="content">anova</a></li>
 <li><a href="as.mxMatrix.html" target="content">as.mxMatrix</a></li>
 <li><a href="asyCov.html" target="content">asyCov</a></li>
@@ -141,7 +143,7 @@ dt, p code {
 <li><a href="wvs94b.html" target="content">wvs94b</a></li>
 </ul>
 
-<p>Generated with <a href="http://yihui.name/knitr">knitr</a>  1.10.5</p>
+<p>Generated with <a href="http://yihui.name/knitr">knitr</a>  1.11</p>
 
 </body>
 
