--- a/manual/Becker83.html
+++ b/manual/Becker83.html
@@ -137,5 +137,5 @@ summary( meta(y=di, v=vi, x=log(items), data=Becker83) )
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
 </body></html>
