--- a/manual/coef.html
+++ b/manual/coef.html
@@ -117,5 +117,5 @@ coef(model1, select=&quot;fixed&quot;)
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
 </body></html>
