--- a/manual/metaSEM-package.html
+++ b/manual/metaSEM-package.html
@@ -32,11 +32,11 @@ Type: </td><td style="text-align: left;"> Package</td>
 </tr>
 <tr>
  <td style="text-align: left;">
-Version: </td><td style="text-align: left;"> 0.9.4</td>
+Version: </td><td style="text-align: left;"> 0.9.5-2</td>
 </tr>
 <tr>
  <td style="text-align: left;">
-Date: </td><td style="text-align: left;"> 2015-06-07</td>
+Date: </td><td style="text-align: left;"> 2015-09-17</td>
 </tr>
 <tr>
  <td style="text-align: left;">
@@ -81,14 +81,18 @@ LazyLoad: </td><td style="text-align: left;"> yes</td>
 </p>
 <p>Cheung, M. W.-L. (2015). metaSEM: An R package for meta-analysis using structural equation modeling. <em>Frontiers in Psychology</em>, <b>5</b>, 1521.
 </p>
-<p>Cheung, M. W.-L. (2015). <em>Meta-Analysis: A Structural Equation Modeling Approach</em>. Wiley.
+<p>Cheung, M. W.-L. (2015). <em>Meta-Analysis: A Structural Equation Modeling Approach</em>. Chichester, West Sussex: John Wiley \&amp; Sons, Inc.
 </p>
 <p>Cheung, M. W.-L., &amp; Chan, W. (2004). Testing dependent correlation coefficients via structural equation modeling. <em>Organizational Research Methods</em>, <b>7</b>, 206-223.
 </p>
 <p>Cheung, M. W.-L., &amp; Chan, W. (2005). Meta-analytic structural equation modeling: A two-stage approach. <em>Psychological Methods</em>, <b>10</b>, 40-64.
 </p>
-<p>Cheung, M. W.-L., &amp; Chan, W. (2009). A two-stage approach to synthesizing covariance matrices in meta-analytic structural equation modeling. <em>Structural Equation Modeling</em>, <b>16</b>, 28-53.
+<p>Cheung, M. W.-L., &amp; Chan, W. (2009). A two-stage approach to
+synthesizing covariance matrices in meta-analytic structural equation modeling. <em>Structural Equation Modeling</em>, <b>16</b>, 28-53.
+</p>
+<p>Cheung, M.W.-L., &amp; Cheung, S.-F. (in press). Random-effects models for meta-analytic structural equation modeling: Review, issues, and
+illustrations. <em>Research Synthesis Methods.</em>
 </p>
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
 </body></html>
