--- a/manual/reml3.html
+++ b/manual/reml3.html
@@ -198,5 +198,5 @@ Methods</em>, <b>10(3)</b>, 259-284.
 
 </p>
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
 </body></html>
