--- a/manual/summary.html
+++ b/manual/summary.html
@@ -118,5 +118,5 @@ estimation problems. Users should refer to <a href="http://openmx.psyc.virginia.
 <code><a href="meta.html">meta</a></code>, <code><a href="reml.html">reml</a></code>
 </p>
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
 </body></html>
