--- a/manual/vcov.html
+++ b/manual/vcov.html
@@ -133,5 +133,5 @@ vcov(model1, select=&quot;random&quot;)
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
 </body></html>
