--- a/manual/vec2symMat.html
+++ b/manual/vec2symMat.html
@@ -120,5 +120,5 @@ vec2symMat(letters[1:6])
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
 </body></html>
