--- a/manual/Cooper03.html
+++ b/manual/Cooper03.html
@@ -59,52 +59,290 @@ Methods</em>, <b>2</b>, 61-76. doi:10.1002/jrsm.35
 
 <h3>Examples</h3>
 
-<pre><code class="r">## Not run: 
-##D data(Cooper03)
-##D 
-##D #### ML estimation method
-##D ## No predictor
-##D summary( model1 &lt;- meta3(y=y, v=v, cluster=District, data=Cooper03) )
-##D 
-##D ## Show all heterogeneity indices and their 95% confidence intervals
-##D summary( meta3(y=y, v=v, cluster=District, data=Cooper03,
-##D                intervals.type=&quot;LB&quot;, I2=c(&quot;I2q&quot;, &quot;I2hm&quot;, &quot;I2am&quot;, &quot;ICC&quot;)) )
-##D 
-##D ## Year as a predictor
-##D summary( meta3(y=y, v=v, cluster=District, x=scale(Year, scale=FALSE),
-##D                data=Cooper03, model.name=&quot;Year as a predictor&quot;) )
-##D 
-##D ## Equality of level-2 and level-3 heterogeneity
-##D summary( model2 &lt;- meta3(y=y, v=v, cluster=District, data=Cooper03,
-##D                          RE2.constraints=&quot;0.2*EqTau2&quot;,
-##D                          RE3.constraints=&quot;0.2*EqTau2&quot;,
-##D                          model.name=&quot;Equal Tau2&quot;) )
-##D 
-##D ## Compare model2 vs. model1
-##D anova(model1, model2)
-##D 
-##D #### REML estimation method
-##D ## No predictor
-##D summary( reml3(y=y, v=v, cluster=District, data=Cooper03) )
-##D 
-##D ## Level-2 and level-3 variances are constrained equally 
-##D summary( reml3(y=y, v=v, cluster=District, data=Cooper03,
-##D                RE.equal=TRUE, model.name=&quot;Equal Tau2&quot;) )
-##D 
-##D ## Year as a predictor
-##D summary( reml3(y=y, v=v, cluster=District, x=scale(Year, scale=FALSE),
-##D                data=Cooper03, intervals.type=&quot;LB&quot;) )
-##D 
-##D ## Handling missing covariates with FIML
-##D ## Create 20/56 MCAR data in Year
-##D set.seed(10000)
-##D Year_MCAR &lt;- Cooper03$Year
-##D Year_MCAR[sample(56, 20)] &lt;- NA
-##D summary( meta3X(y=y, v=v, cluster=District, x2=scale(Year_MCAR, scale=FALSE),
-##D                 data=Cooper03, model.name=&quot;NA in Year_MCAR&quot;) )
-## End(Not run)
+<pre><code class="r">data(Cooper03)
+
+#### ML estimation method
+## No predictor
+summary( model1 &lt;- meta3(y=y, v=v, cluster=District, data=Cooper03) )
+</code></pre>
+
+<pre><code>## 
+## Call:
+## meta3(y = y, v = v, cluster = District, data = Cooper03)
+## 
+## 95% confidence intervals: z statistic approximation
+## Coefficients:
+##             Estimate  Std.Error     lbound     ubound z value Pr(&gt;|z|)   
+## Intercept  0.1844554  0.0805411  0.0265977  0.3423130  2.2902 0.022010 * 
+## Tau2_2     0.0328648  0.0111397  0.0110314  0.0546982  2.9502 0.003175 **
+## Tau2_3     0.0577384  0.0307423 -0.0025154  0.1179921  1.8781 0.060362 . 
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
+## 
+## Q statistic on the homogeneity of effect sizes: 578.864
+## Degrees of freedom of the Q statistic: 55
+## P value of the Q statistic: 0
+## 
+## Heterogeneity indices (based on the estimated Tau2):
+##                               Estimate
+## I2_2 (Typical v: Q statistic)   0.3440
+## I2_3 (Typical v: Q statistic)   0.6043
+## 
+## Number of studies (or clusters): 11
+## Number of observed statistics: 56
+## Number of estimated parameters: 3
+## Degrees of freedom: 53
+## -2 log likelihood: 16.78987 
+## OpenMx status1: 0 (&quot;0&quot; or &quot;1&quot;: The optimization is considered fine.
+## Other values may indicate problems.)
+</code></pre>
+
+<pre><code class="r">## Show all heterogeneity indices and their 95% confidence intervals
+summary( meta3(y=y, v=v, cluster=District, data=Cooper03,
+               intervals.type=&quot;LB&quot;, I2=c(&quot;I2q&quot;, &quot;I2hm&quot;, &quot;I2am&quot;, &quot;ICC&quot;)) )
+</code></pre>
+
+<pre><code>## 
+## Call:
+## meta3(y = y, v = v, cluster = District, data = Cooper03, intervals.type = &quot;LB&quot;, 
+##     I2 = c(&quot;I2q&quot;, &quot;I2hm&quot;, &quot;I2am&quot;, &quot;ICC&quot;))
+## 
+## 95% confidence intervals: Likelihood-based statistic
+## Coefficients:
+##           Estimate Std.Error   lbound   ubound z value Pr(&gt;|z|)
+## Intercept 0.184455        NA 0.012023 0.358179      NA       NA
+## Tau2_2    0.032865        NA 0.016331 0.060489      NA       NA
+## Tau2_3    0.057738        NA 0.019809 0.119931      NA       NA
+## 
+## Q statistic on the homogeneity of effect sizes: 578.864
+## Degrees of freedom of the Q statistic: 55
+## P value of the Q statistic: 0
+## 
+## Heterogeneity indices (I2) and their 95% likelihood-based CIs:
+##                                    lbound Estimate ubound
+## I2_2 (Typical v: Q statistic)     0.12755  0.34396 0.5930
+## I2_2 (Typical v: harmonic mean)   0.12771  0.34474 0.5323
+## I2_2 (Typical v: arithmetic mean) 0.11360  0.28177 0.4315
+## ICC_2 (tau^2/(tau^2+tau^3))       0.13123  0.36273 0.7005
+## I2_3 (Typical v: Q statistic)     0.34963  0.60429 0.8451
+## I2_3 (Typical v: harmonic mean)   0.42852  0.60565 0.8461
+## I2_3 (Typical v: arithmetic mean) 0.23255  0.49502 0.7621
+## ICC_3 (tau^3/(tau^2+tau^3))       0.29948  0.63727 0.8688
+## 
+## Number of studies (or clusters): 11
+## Number of observed statistics: 56
+## Number of estimated parameters: 3
+## Degrees of freedom: 53
+## -2 log likelihood: 16.78987 
+## OpenMx status1: 0 (&quot;0&quot; or &quot;1&quot;: The optimization is considered fine.
+## Other values may indicate problems.)
+</code></pre>
+
+<pre><code class="r">## Year as a predictor
+summary( meta3(y=y, v=v, cluster=District, x=scale(Year, scale=FALSE),
+               data=Cooper03, model.name=&quot;Year as a predictor&quot;) )
+</code></pre>
+
+<pre><code>## 
+## Call:
+## meta3(y = y, v = v, cluster = District, x = scale(Year, scale = FALSE), 
+##     data = Cooper03, model.name = &quot;Year as a predictor&quot;)
+## 
+## 95% confidence intervals: z statistic approximation
+## Coefficients:
+##             Estimate  Std.Error     lbound     ubound z value Pr(&gt;|z|)   
+## Intercept  0.1780268  0.0805219  0.0202067  0.3358469  2.2109 0.027042 * 
+## Slope_1    0.0050737  0.0085266 -0.0116382  0.0217856  0.5950 0.551814   
+## Tau2_2     0.0329390  0.0111620  0.0110618  0.0548162  2.9510 0.003168 **
+## Tau2_3     0.0564628  0.0300330 -0.0024007  0.1153264  1.8800 0.060104 . 
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
+## 
+## Q statistic on the homogeneity of effect sizes: 578.864
+## Degrees of freedom of the Q statistic: 55
+## P value of the Q statistic: 0
+## 
+## Explained variances (R2):
+##                         Level 2 Level 3
+## Tau2 (no predictor)    0.032865  0.0577
+## Tau2 (with predictors) 0.032939  0.0565
+## R2                     0.000000  0.0221
+## 
+## Number of studies (or clusters): 11
+## Number of observed statistics: 56
+## Number of estimated parameters: 4
+## Degrees of freedom: 52
+## -2 log likelihood: 16.43629 
+## OpenMx status1: 0 (&quot;0&quot; or &quot;1&quot;: The optimization is considered fine.
+## Other values may indicate problems.)
+</code></pre>
+
+<pre><code class="r">## Equality of level-2 and level-3 heterogeneity
+summary( model2 &lt;- meta3(y=y, v=v, cluster=District, data=Cooper03,
+                         RE2.constraints=&quot;0.2*EqTau2&quot;,
+                         RE3.constraints=&quot;0.2*EqTau2&quot;,
+                         model.name=&quot;Equal Tau2&quot;) )
+</code></pre>
+
+<pre><code>## 
+## Call:
+## meta3(y = y, v = v, cluster = District, data = Cooper03, RE2.constraints = &quot;0.2*EqTau2&quot;, 
+##     RE3.constraints = &quot;0.2*EqTau2&quot;, model.name = &quot;Equal Tau2&quot;)
+## 
+## 95% confidence intervals: z statistic approximation
+## Coefficients:
+##            Estimate Std.Error    lbound    ubound z value Pr(&gt;|z|)    
+## Intercept 0.1813380 0.0699502 0.0442382 0.3184378  2.5924 0.009531 ** 
+## EqTau2    0.0392490 0.0099498 0.0197478 0.0587502  3.9447 7.99e-05 ***
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
+## 
+## Q statistic on the homogeneity of effect sizes: 578.864
+## Degrees of freedom of the Q statistic: 55
+## P value of the Q statistic: 0
+## 
+## Heterogeneity indices (based on the estimated Tau2):
+##                               Estimate
+## I2_2 (Typical v: Q statistic)   0.4704
+## I2_3 (Typical v: Q statistic)   0.4704
+## 
+## Number of studies (or clusters): 11
+## Number of observed statistics: 56
+## Number of estimated parameters: 2
+## Degrees of freedom: 54
+## -2 log likelihood: 17.47697 
+## OpenMx status1: 0 (&quot;0&quot; or &quot;1&quot;: The optimization is considered fine.
+## Other values may indicate problems.)
+</code></pre>
+
+<pre><code class="r">## Compare model2 vs. model1
+anova(model1, model2)
+</code></pre>
+
+<pre><code>##                    base comparison ep minus2LL df       AIC    diffLL
+## 1 Meta analysis with ML       &lt;NA&gt;  3 16.78987 53 -89.21013        NA
+## 2 Meta analysis with ML Equal Tau2  2 17.47697 54 -90.52303 0.6870959
+##   diffdf         p
+## 1     NA        NA
+## 2      1 0.4071539
+</code></pre>
+
+<pre><code class="r">#### REML estimation method
+## No predictor
+summary( reml3(y=y, v=v, cluster=District, data=Cooper03) )
+</code></pre>
+
+<pre><code>## 
+## Call:
+## reml3(y = y, v = v, cluster = District, data = Cooper03)
+## 
+## 95% confidence intervals: z statistic approximation
+## Coefficients:
+##          Estimate  Std.Error     lbound     ubound z value Pr(&gt;|z|)   
+## Tau2_2  0.0327365  0.0110922  0.0109963  0.0544768  2.9513 0.003164 **
+## Tau2_3  0.0650619  0.0355102 -0.0045368  0.1346607  1.8322 0.066921 . 
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
+## 
+## Number of studies (or clusters): 56
+## Number of observed statistics: 55
+## Number of estimated parameters: 2
+## Degrees of freedom: 53
+## -2 log likelihood: -81.14044 
+## OpenMx status1: 0 (&quot;0&quot; or &quot;1&quot;: The optimization is considered fine.
+## Other values may indicate problems.)
+</code></pre>
+
+<pre><code class="r">## Level-2 and level-3 variances are constrained equally 
+summary( reml3(y=y, v=v, cluster=District, data=Cooper03,
+               RE.equal=TRUE, model.name=&quot;Equal Tau2&quot;) )
+</code></pre>
+
+<pre><code>## 
+## Call:
+## reml3(y = y, v = v, cluster = District, data = Cooper03, RE.equal = TRUE, 
+##     model.name = &quot;Equal Tau2&quot;)
+## 
+## 95% confidence intervals: z statistic approximation
+## Coefficients:
+##      Estimate Std.Error   lbound   ubound z value  Pr(&gt;|z|)    
+## Tau2 0.040418  0.010290 0.020249 0.060587  3.9277 8.576e-05 ***
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
+## 
+## Number of studies (or clusters): 56
+## Number of observed statistics: 55
+## Number of estimated parameters: 1
+## Degrees of freedom: 54
+## -2 log likelihood: -80.1371 
+## OpenMx status1: 0 (&quot;0&quot; or &quot;1&quot;: The optimization is considered fine.
+## Other values may indicate problems.)
+</code></pre>
+
+<pre><code class="r">## Year as a predictor
+summary( reml3(y=y, v=v, cluster=District, x=scale(Year, scale=FALSE),
+               data=Cooper03, intervals.type=&quot;LB&quot;) )
+</code></pre>
+
+<pre><code>## 
+## Call:
+## reml3(y = y, v = v, cluster = District, x = scale(Year, scale = FALSE), 
+##     data = Cooper03, intervals.type = &quot;LB&quot;)
+## 
+## 95% confidence intervals: Likelihood-based statistic
+## Coefficients:
+##        Estimate Std.Error   lbound   ubound z value Pr(&gt;|z|)
+## Tau2_2 0.032650        NA 0.016228 0.062606      NA       NA
+## Tau2_3 0.072266        NA 0.024426 0.120867      NA       NA
+## 
+## Number of studies (or clusters): 56
+## Number of observed statistics: 54
+## Number of estimated parameters: 2
+## Degrees of freedom: 52
+## -2 log likelihood: -72.09405 
+## OpenMx status1: 0 (&quot;0&quot; or &quot;1&quot;: The optimization is considered fine.
+## Other values may indicate problems.)
+</code></pre>
+
+<pre><code class="r">## Handling missing covariates with FIML
+## Create 20/56 MCAR data in Year
+set.seed(10000)
+Year_MCAR &lt;- Cooper03$Year
+Year_MCAR[sample(56, 20)] &lt;- NA
+summary( meta3X(y=y, v=v, cluster=District, x2=scale(Year_MCAR, scale=FALSE),
+                data=Cooper03, model.name=&quot;NA in Year_MCAR&quot;) )
+</code></pre>
+
+<pre><code>## 
+## Call:
+## meta3X(y = y, v = v, cluster = District, x2 = scale(Year_MCAR, 
+##     scale = FALSE), data = Cooper03, model.name = &quot;NA in Year_MCAR&quot;)
+## 
+## 95% confidence intervals: z statistic approximation
+## Coefficients:
+##             Estimate  Std.Error     lbound     ubound z value Pr(&gt;|z|)   
+## Intercept  0.1794793  0.0802303  0.0222308  0.3367278  2.2371 0.025283 * 
+## SlopeX2_1  0.0051003  0.0085320 -0.0116222  0.0218228  0.5978 0.549983   
+## Tau2_2     0.0329375  0.0111611  0.0110621  0.0548129  2.9511 0.003166 **
+## Tau2_3     0.0564662  0.0300320 -0.0023955  0.1153278  1.8802 0.060081 . 
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
+## 
+## Explained variances (R2):
+##                         Level 2 Level 3
+## Tau2 (no predictor)    0.032865  0.0577
+## Tau2 (with predictors) 0.032938  0.0565
+## R2                     0.000000  0.0220
+## 
+## Number of studies (or clusters): 11
+## Number of observed statistics: 92
+## Number of estimated parameters: 7
+## Degrees of freedom: 85
+## -2 log likelihood: 89.57662 
+## OpenMx status1: 0 (&quot;0&quot; or &quot;1&quot;: The optimization is considered fine.
+## Other values may indicate problems.)
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
 </body></html>
