--- a/manual/HedgesOlkin85.html
+++ b/manual/HedgesOlkin85.html
@@ -102,5 +102,5 @@ summary( meta(y=cbind(d_att, d_ach),
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
 </body></html>
