--- a/manual/Mak09.html
+++ b/manual/Mak09.html
@@ -159,5 +159,5 @@ summary( meta(y=yi, v=vi, x=age.mean, data=Mak09) )
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
 </body></html>
