--- a/manual/asyCov.html
+++ b/manual/asyCov.html
@@ -116,9 +116,9 @@ asyCov(C1, n=100)
 </code></pre>
 
 <pre><code>##              x2x1         x3x1        x3x2
-## x2x1 0.0056818164 0.0006363813 0.002590919
-## x3x1 0.0006363813 0.0071272669 0.003818187
-## x3x2 0.0025909187 0.0038181868 0.009309098
+## x2x1 0.0056818141 0.0006363402 0.002590891
+## x3x1 0.0006363402 0.0071272722 0.003818168
+## x3x2 0.0025908914 0.0038181681 0.009309082
 </code></pre>
 
 <pre><code class="r">## Data with missing values
@@ -131,17 +131,17 @@ asyCov(list(C1,C2,C3), n=c(100,50,50), dropNA=TRUE, as.matrix=FALSE)
 
 <pre><code>## [[1]]
 ##              x2x1         x3x1        x3x2
-## x2x1 0.0056818084 0.0006363522 0.002590892
-## x3x1 0.0006363522 0.0071272620 0.003818173
-## x3x2 0.0025908922 0.0038181728 0.009309078
+## x2x1 0.0056818356 0.0006364134 0.002590956
+## x3x1 0.0006364134 0.0071272783 0.003818208
+## x3x2 0.0025909564 0.0038182080 0.009309108
 ## 
 ## [[2]]
-##        x2x1
-## x2x1 0.0144
+##            x2x1
+## x2x1 0.01439999
 ## 
 ## [[3]]
 ##            x2x1
-## x2x1 0.01880814
+## x2x1 0.01880819
 </code></pre>
 
 <pre><code class="r">## Output is a stacked matrix of asymptotic covariance matrices
@@ -149,10 +149,10 @@ asyCov(list(C1,C2), n=c(100,50), as.matrix=TRUE)
 </code></pre>
 
 <pre><code>##      cov(x2x1_x2x1) cov(x3x1_x2x1) cov(x3x2_x2x1) cov(x3x1_x3x1)
-## [1,]    0.005681815   0.0006363571    0.002590896    0.007127269
-## [2,]    0.014399983             NA             NA             NA
+## [1,]    0.005681829     0.00063639    0.002590938    0.007127269
+## [2,]    0.014399962             NA             NA             NA
 ##      cov(x3x2_x3x1) cov(x3x2_x3x2)
-## [1,]    0.003818172    0.009309074
+## [1,]    0.003818191    0.009309112
 ## [2,]             NA             NA
 </code></pre>
 
@@ -161,10 +161,10 @@ asyCov(list(C3,C3), n=c(100,50), as.matrix=TRUE)
 </code></pre>
 
 <pre><code>##      cov(x2x1_x2x1)
-## [1,]    0.009309105
-## [2,]    0.018808173
+## [1,]    0.009309077
+## [2,]    0.018808114
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
 </body></html>
