--- a/manual/create.Fmatrix.html
+++ b/manual/create.Fmatrix.html
@@ -119,5 +119,5 @@ create.Fmatrix(c(1,1,1,0,0), as.mxMatrix=FALSE)
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
 </body></html>
