--- a/manual/create.mxMatrix.html
+++ b/manual/create.mxMatrix.html
@@ -255,5 +255,5 @@ dimensions as <code>x</code>
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
 </body></html>
