--- a/manual/indirectEffect.html
+++ b/manual/indirectEffect.html
@@ -118,5 +118,5 @@ indirectEffect( list(x, x), n=c(300,500), standardized=FALSE )
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
 </body></html>
