--- a/manual/issp05.html
+++ b/manual/issp05.html
@@ -65,54 +65,146 @@ people (CS1) and a job useful to society (CS2).
 
 <h3>Examples</h3>
 
-<pre><code class="r">## Not run: 
-##D data(issp05)
-##D 
-##D #### Fixed-effects TSSEM
-##D fixed1 &lt;- tssem1(issp05$data, issp05$n, method=&quot;FEM&quot;)
-##D summary(fixed1)
-##D 
-##D ## Prepare a model implied matrix
-##D ## Factor correlation matrix
-##D Phi &lt;- create.mxMatrix( c(&quot;0.3*corf2f1&quot;,&quot;0.3*corf3f1&quot;,&quot;0.3*corf3f2&quot;),
-##D                         type=&quot;Stand&quot;, as.mxMatrix=FALSE )
-##D 
-##D ## Error variances
-##D Psi &lt;- create.mxMatrix( paste(&quot;0.2*e&quot;, 1:7, sep=&quot;&quot;), type=&quot;Diag&quot;,
-##D                         as.mxMatrix=FALSE )
-##D 
-##D ## Create Smatrix
-##D S1 &lt;- bdiagMat(list(Psi, Phi))
-##D ## dimnames(S1)[[1]] &lt;- dimnames(S1)[[2]] &lt;- c(paste(&quot;x&quot;,1:7,sep=&quot;&quot;),
-##D ##                                             paste(&quot;f&quot;,1:3,sep=&quot;&quot;))
-##D ## S1
-##D S1 &lt;- as.mxMatrix(S1)
-##D 
-##D ## Factor loadings
-##D Lambda &lt;- create.mxMatrix( c(&quot;.3*f1x1&quot;,&quot;.3*f1x2&quot;,&quot;.3*f1x3&quot;,rep(0,7),
-##D                              &quot;.3*f2x4&quot;,&quot;.3*f2x5&quot;,rep(0,7),&quot;.3*f3x6&quot;,&quot;.3*f3x7&quot;),
-##D                            type=&quot;Full&quot;, ncol=3, nrow=7, as.mxMatrix=FALSE )
-##D Zero1 &lt;- matrix(0, nrow=7, ncol=7)
-##D Zero2 &lt;- matrix(0, nrow=3, ncol=10)
-##D 
-##D ## Create Amatrix
-##D A1 &lt;- rbind( cbind(Zero1, Lambda),
-##D              Zero2 )
-##D ## dimnames(A1)[[1]] &lt;- dimnames(A1)[[2]] &lt;- c(paste(&quot;x&quot;,1:7,sep=&quot;&quot;),
-##D ##                                             paste(&quot;f&quot;,1:3,sep=&quot;&quot;))
-##D ## A1
-##D A1 &lt;- as.mxMatrix(A1)
-##D 
-##D ## Create Fmatrix
-##D F1 &lt;- create.Fmatrix(c(rep(1,7), rep(0,3)))
-##D 
-##D #### Fixed-effects model: Stage 2 analysis
-##D fixed2 &lt;- tssem2(fixed1, Amatrix=A1, Smatrix=S1, Fmatrix=F1,
-##D                  intervals.type=&quot;LB&quot;)
-##D summary(fixed2)
-## End(Not run)
+<pre><code class="r">data(issp05)
+
+#### Fixed-effects TSSEM
+fixed1 &lt;- tssem1(issp05$data, issp05$n, method=&quot;FEM&quot;)
+summary(fixed1)
+</code></pre>
+
+<pre><code>## 
+## Call:
+## tssem1FEM(my.df = my.df, n = n, cor.analysis = cor.analysis, 
+##     model.name = model.name, cluster = cluster, suppressWarnings = suppressWarnings, 
+##     silent = silent, run = run)
+## 
+## Coefficients:
+##         Estimate Std.Error z value  Pr(&gt;|z|)    
+## S[1,2] 0.3458534 0.0043972  78.653 &lt; 2.2e-16 ***
+## S[1,3] 0.2957095 0.0045561  64.904 &lt; 2.2e-16 ***
+## S[1,4] 0.1451601 0.0048892  29.690 &lt; 2.2e-16 ***
+## S[1,5] 0.0902532 0.0049425  18.261 &lt; 2.2e-16 ***
+## S[1,6] 0.2058959 0.0047692  43.172 &lt; 2.2e-16 ***
+## S[1,7] 0.2178547 0.0047436  45.926 &lt; 2.2e-16 ***
+## S[2,3] 0.4039976 0.0041675  96.939 &lt; 2.2e-16 ***
+## S[2,4] 0.1941407 0.0047956  40.483 &lt; 2.2e-16 ***
+## S[2,5] 0.1905024 0.0047941  39.737 &lt; 2.2e-16 ***
+## S[2,6] 0.1348607 0.0048961  27.544 &lt; 2.2e-16 ***
+## S[2,7] 0.1432349 0.0048851  29.321 &lt; 2.2e-16 ***
+## S[3,4] 0.2780695 0.0046175  60.221 &lt; 2.2e-16 ***
+## S[3,5] 0.1882147 0.0048153  39.087 &lt; 2.2e-16 ***
+## S[3,6] 0.2530853 0.0046819  54.056 &lt; 2.2e-16 ***
+## S[3,7] 0.2500478 0.0046872  53.347 &lt; 2.2e-16 ***
+## S[4,5] 0.3628185 0.0043406  83.586 &lt; 2.2e-16 ***
+## S[4,6] 0.3779793 0.0042869  88.171 &lt; 2.2e-16 ***
+## S[4,7] 0.3178023 0.0044903  70.775 &lt; 2.2e-16 ***
+## S[5,6] 0.2647940 0.0046379  57.094 &lt; 2.2e-16 ***
+## S[5,7] 0.2541328 0.0046685  54.436 &lt; 2.2e-16 ***
+## S[6,7] 0.6623115 0.0028146 235.312 &lt; 2.2e-16 ***
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
+## 
+## Goodness-of-fit indices:
+##                                       Value
+## Sample size                      40596.0000
+## Chi-square of target model        5305.5769
+## DF of target model                 651.0000
+## p value of target model              0.0000
+## Chi-square of independence model 61872.2338
+## DF of independence model           672.0000
+## RMSEA                                0.0751
+## SRMR                                 0.0902
+## TLI                                  0.9215
+## CFI                                  0.9239
+## AIC                               4003.5769
+## BIC                              -1602.4607
+## OpenMx status1: 6 (&quot;0&quot; or &quot;1&quot;: The optimization is considered fine.
+## Other values may indicate problems.)
+</code></pre>
+
+<pre><code class="r">## Prepare a model implied matrix
+## Factor correlation matrix
+Phi &lt;- create.mxMatrix( c(&quot;0.3*corf2f1&quot;,&quot;0.3*corf3f1&quot;,&quot;0.3*corf3f2&quot;),
+                        type=&quot;Stand&quot;, as.mxMatrix=FALSE )
+
+## Error variances
+Psi &lt;- create.mxMatrix( paste(&quot;0.2*e&quot;, 1:7, sep=&quot;&quot;), type=&quot;Diag&quot;,
+                        as.mxMatrix=FALSE )
+
+## Create Smatrix
+S1 &lt;- bdiagMat(list(Psi, Phi))
+## dimnames(S1)[[1]] &lt;- dimnames(S1)[[2]] &lt;- c(paste(&quot;x&quot;,1:7,sep=&quot;&quot;),
+##                                             paste(&quot;f&quot;,1:3,sep=&quot;&quot;))
+## S1
+S1 &lt;- as.mxMatrix(S1)
+
+## Factor loadings
+Lambda &lt;- create.mxMatrix( c(&quot;.3*f1x1&quot;,&quot;.3*f1x2&quot;,&quot;.3*f1x3&quot;,rep(0,7),
+                             &quot;.3*f2x4&quot;,&quot;.3*f2x5&quot;,rep(0,7),&quot;.3*f3x6&quot;,&quot;.3*f3x7&quot;),
+                           type=&quot;Full&quot;, ncol=3, nrow=7, as.mxMatrix=FALSE )
+Zero1 &lt;- matrix(0, nrow=7, ncol=7)
+Zero2 &lt;- matrix(0, nrow=3, ncol=10)
+
+## Create Amatrix
+A1 &lt;- rbind( cbind(Zero1, Lambda),
+             Zero2 )
+## dimnames(A1)[[1]] &lt;- dimnames(A1)[[2]] &lt;- c(paste(&quot;x&quot;,1:7,sep=&quot;&quot;),
+##                                             paste(&quot;f&quot;,1:3,sep=&quot;&quot;))
+## A1
+A1 &lt;- as.mxMatrix(A1)
+
+## Create Fmatrix
+F1 &lt;- create.Fmatrix(c(rep(1,7), rep(0,3)))
+
+#### Fixed-effects model: Stage 2 analysis
+fixed2 &lt;- tssem2(fixed1, Amatrix=A1, Smatrix=S1, Fmatrix=F1,
+                 intervals.type=&quot;LB&quot;)
+summary(fixed2)
+</code></pre>
+
+<pre><code>## 
+## Call:
+## wls(Cov = pooledS, asyCov = tssem1.obj$acovS, n = sum(tssem1.obj$n), 
+##     Amatrix = Amatrix, Smatrix = Smatrix, Fmatrix = Fmatrix, 
+##     diag.constraints = diag.constraints, cor.analysis = cor.analysis, 
+##     intervals.type = intervals.type, mx.algebras = mx.algebras, 
+##     model.name = model.name, suppressWarnings = suppressWarnings, 
+##     silent = silent, run = run)
+## 
+## 95% confidence intervals: Likelihood-based statistic
+## Coefficients:
+##         Estimate Std.Error  lbound  ubound z value Pr(&gt;|z|)
+## f1x1     0.51978        NA 0.50958 0.52998      NA       NA
+## f1x2     0.64076        NA 0.63083 0.65073      NA       NA
+## f1x3     0.66364        NA 0.65391 0.67340      NA       NA
+## f2x4     0.69218        NA 0.68120 0.70326      NA       NA
+## f2x5     0.53312        NA 0.52284 0.54342      NA       NA
+## f3x6     0.84929        NA 0.84149 0.85713      NA       NA
+## f3x7     0.77874        NA 0.77097 0.78652      NA       NA
+## corf2f1  0.52611        NA 0.51175 0.54054      NA       NA
+## corf3f1  0.42026        NA 0.40782 0.43268      NA       NA
+## corf3f2  0.63541        NA 0.62324 0.64764      NA       NA
+## 
+## Goodness-of-fit indices:
+##                                                 Value
+## Sample size                                40596.0000
+## Chi-square of target model                  1707.9305
+## DF of target model                            11.0000
+## p value of target model                        0.0000
+## Number of constraints imposed on &quot;Smatrix&quot;     0.0000
+## DF manually adjusted                           0.0000
+## Chi-square of independence model           75251.3615
+## DF of independence model                      21.0000
+## RMSEA                                          0.0616
+## SRMR                                           0.0375
+## TLI                                            0.9569
+## CFI                                            0.9774
+## AIC                                         1685.9305
+## BIC                                         1591.2048
+## OpenMx status1: 0 (&quot;0&quot; or &quot;1&quot;: The optimization is considered fine.
+## Other values indicate problems.)
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
 </body></html>
