--- a/manual/list2matrix.html
+++ b/manual/list2matrix.html
@@ -96,5 +96,5 @@ list2matrix(list(C1, C2))
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
 </body></html>
