--- a/manual/meta2semPlot.html
+++ b/manual/meta2semPlot.html
@@ -83,5 +83,5 @@ in plotting. If <code>RAM</code>, the RAM notations are used in plotting.
 <code><a href="Digman97.html">Digman97</a></code>, <code><a href="Hunter83.html">Hunter83</a></code>
 </p>
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
 </body></html>
