--- a/manual/pattern.na.html
+++ b/manual/pattern.na.html
@@ -94,5 +94,5 @@ pattern.na(Hunter83$data, show.na=FALSE)
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
 </body></html>
