--- a/manual/print.html
+++ b/manual/print.html
@@ -68,5 +68,5 @@ class <code>wls</code>, class <code>meta</code>, class <code>meta3X</code> or cl
 
 </p>
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
 </body></html>
