--- a/manual/readData.html
+++ b/manual/readData.html
@@ -63,91 +63,133 @@ readLowTriMat(file, no.var, ...)
 
 <h3>Examples</h3>
 
-<pre><code class="r">## Not run: 
-##D ## Write two full correlation matrices into a file named &quot;fullmat.dat&quot;.
-##D ## x2 is missing in the second matrix.
-##D ## The content of &quot;fullmat.dat&quot; is
-##D # 1.0 0.3 0.4
-##D # 0.3 1.0 0.5
-##D # 0.4 0.5 1.0
-##D # 1.0 NA 0.4
-##D # NA NA NA
-##D # 0.4 NA 1.0
-##D cat(&quot;1.0 0.3 0.4\n0.3 1.0 0.5\n0.4 0.5 1.0
-##D 1.0 NA 0.4\nNA NA NA\n0.4 NA 1.0&quot;,
-##D file=&quot;fullmat.dat&quot;, sep=&quot;&quot;)
-##D 
-##D ## Read the correlation matrices
-##D my.full &lt;- readFullMat(&quot;fullmat.dat&quot;)
-##D 
-##D my.full
-##D # $`1`
-##D #     x1  x2  x3
-##D # x1 1.0 0.3 0.4
-##D # x2 0.3 1.0 0.5
-##D # x3 0.4 0.5 1.0
-##D #
-##D # $`2`
-##D #     x1 x2  x3
-##D # x1 1.0 NA 0.4
-##D # x2  NA NA  NA
-##D # x3 0.4 NA 1.0
-##D 
-##D ## Write two lower triangle correlation matrices into a file named &quot;lowertriangle.dat&quot;.
-##D ## x2 is missing in the second matrix.
-##D ## The content of &quot;lowertriangle.dat&quot; is
-##D # 1.0 
-##D # 0.3 1.0 
-##D # 0.4 0.5 1.0
-##D # 1.0
-##D # NA NA 
-##D # 0.4 NA 1.0
-##D cat(&quot;1.0\n0.3 1.0\n0.4 0.5 1.0\n1.0\nNA NA\n0.4 NA 1.0&quot;,
-##D     file=&quot;lowertriangle.dat&quot;, sep=&quot;&quot;)
-##D 
-##D ## Read the lower triangle correlation matrices
-##D my.lowertri &lt;- readLowTriMat(file = &quot;lowertriangle.dat&quot;, no.var = 3)
-##D 
-##D my.lowertri
-##D # $`1`
-##D #     x1  x2  x3
-##D # x1 1.0 0.3 0.4
-##D # x2 0.3 1.0 0.5
-##D # x3 0.4 0.5 1.0
-##D #
-##D # $`2`
-##D #     x1 x2  x3
-##D # x1 1.0 NA 0.4
-##D # x2  NA NA  NA
-##D # x3 0.4 NA 1.0
-##D 
-##D ## Write two vectors of correlation coefficients based on
-##D ##  column major into a file named &quot;stackvec.dat&quot;.
-##D ## x2 is missing in the second matrix.
-##D ## The content of &quot;stackvec.dat&quot; is
-##D # 1.0 0.3 0.4 1.0 0.5 1.0
-##D # 1.0 NA 0.4 NA NA 1.0
-##D cat(&quot;1.0 0.3 0.4 1.0 0.5 1.0\n1.0 NA 0.4 NA NA 1.0\n&quot;,
-##D     file=&quot;stackvec.dat&quot;, sep=&quot;&quot;)
-##D 
-##D my.vec &lt;- readStackVec(&quot;stackvec.dat&quot;)
-##D 
-##D my.vec
-##D # $`1`
-##D #     x1  x2  x3
-##D # x1 1.0 0.3 0.4
-##D # x2 0.3 1.0 0.5
-##D # x3 0.4 0.5 1.0
-##D #
-##D # $`2`
-##D #    x1 x2  x3
-##D # x1 1.0 NA 0.4
-##D # x2  NA NA  NA
-##D # x3 0.4 NA 1.0
-##D 
-## End(Not run)
+<pre><code class="r">## Write two full correlation matrices into a file named &quot;fullmat.dat&quot;.
+## x2 is missing in the second matrix.
+## The content of &quot;fullmat.dat&quot; is
+# 1.0 0.3 0.4
+# 0.3 1.0 0.5
+# 0.4 0.5 1.0
+# 1.0 NA 0.4
+# NA NA NA
+# 0.4 NA 1.0
+cat(&quot;1.0 0.3 0.4\n0.3 1.0 0.5\n0.4 0.5 1.0
+1.0 NA 0.4\nNA NA NA\n0.4 NA 1.0&quot;,
+file=&quot;fullmat.dat&quot;, sep=&quot;&quot;)
+
+## Read the correlation matrices
+my.full &lt;- readFullMat(&quot;fullmat.dat&quot;)
+
+my.full
+</code></pre>
+
+<pre><code>## $`1`
+##     x1  x2  x3
+## x1 1.0 0.3 0.4
+## x2 0.3 1.0 0.5
+## x3 0.4 0.5 1.0
+## 
+## $`2`
+##     x1 x2  x3
+## x1 1.0 NA 0.4
+## x2  NA NA  NA
+## x3 0.4 NA 1.0
+</code></pre>
+
+<pre><code class="r"># $`1`
+#     x1  x2  x3
+# x1 1.0 0.3 0.4
+# x2 0.3 1.0 0.5
+# x3 0.4 0.5 1.0
+#
+# $`2`
+#     x1 x2  x3
+# x1 1.0 NA 0.4
+# x2  NA NA  NA
+# x3 0.4 NA 1.0
+
+## Write two lower triangle correlation matrices into a file named &quot;lowertriangle.dat&quot;.
+## x2 is missing in the second matrix.
+## The content of &quot;lowertriangle.dat&quot; is
+# 1.0 
+# 0.3 1.0 
+# 0.4 0.5 1.0
+# 1.0
+# NA NA 
+# 0.4 NA 1.0
+cat(&quot;1.0\n0.3 1.0\n0.4 0.5 1.0\n1.0\nNA NA\n0.4 NA 1.0&quot;,
+    file=&quot;lowertriangle.dat&quot;, sep=&quot;&quot;)
+
+## Read the lower triangle correlation matrices
+my.lowertri &lt;- readLowTriMat(file = &quot;lowertriangle.dat&quot;, no.var = 3)
+
+my.lowertri
+</code></pre>
+
+<pre><code>## $`1`
+##     x1  x2  x3
+## x1 1.0 0.3 0.4
+## x2 0.3 1.0 0.5
+## x3 0.4 0.5 1.0
+## 
+## $`2`
+##     x1 x2  x3
+## x1 1.0 NA 0.4
+## x2  NA NA  NA
+## x3 0.4 NA 1.0
+</code></pre>
+
+<pre><code class="r"># $`1`
+#     x1  x2  x3
+# x1 1.0 0.3 0.4
+# x2 0.3 1.0 0.5
+# x3 0.4 0.5 1.0
+#
+# $`2`
+#     x1 x2  x3
+# x1 1.0 NA 0.4
+# x2  NA NA  NA
+# x3 0.4 NA 1.0
+
+## Write two vectors of correlation coefficients based on
+##  column major into a file named &quot;stackvec.dat&quot;.
+## x2 is missing in the second matrix.
+## The content of &quot;stackvec.dat&quot; is
+# 1.0 0.3 0.4 1.0 0.5 1.0
+# 1.0 NA 0.4 NA NA 1.0
+cat(&quot;1.0 0.3 0.4 1.0 0.5 1.0\n1.0 NA 0.4 NA NA 1.0\n&quot;,
+    file=&quot;stackvec.dat&quot;, sep=&quot;&quot;)
+
+my.vec &lt;- readStackVec(&quot;stackvec.dat&quot;)
+
+my.vec
+</code></pre>
+
+<pre><code>## $`1`
+##     x1  x2  x3
+## x1 1.0 0.3 0.4
+## x2 0.3 1.0 0.5
+## x3 0.4 0.5 1.0
+## 
+## $`2`
+##     x1 x2  x3
+## x1 1.0 NA 0.4
+## x2  NA NA  NA
+## x3 0.4 NA 1.0
+</code></pre>
+
+<pre><code class="r"># $`1`
+#     x1  x2  x3
+# x1 1.0 0.3 0.4
+# x2 0.3 1.0 0.5
+# x3 0.4 0.5 1.0
+#
+# $`2`
+#    x1 x2  x3
+# x1 1.0 NA 0.4
+# x2  NA NA  NA
+# x3 0.4 NA 1.0
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.4 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
 </body></html>
